syntax = "proto3";
package gov.hhs.aspr.gcm.translation.protobuf;

option java_multiple_files = true;
option java_package = "gov.hhs.aspr.gcm.translation.protobuf.plugins.groups.input";


import "properties-plugin.proto";
import "people-plugin.proto";
import "google/protobuf/any.proto";

message GroupIdInput {
    int32 id = 1;
}

message SimpleGroupTypeIdInput {
    string value = 1;
}

enum TestGroupTypeIdInput {
    GROUP_TYPE_1 = 0;
    GROUP_TYPE_2 = 1;
    GROUP_TYPE_3 = 2;
}

enum TestGroupPropertyIdInput {
    GROUP_PROPERTY_1_1_BOOLEAN_MUTABLE_NO_TRACK = 0;
    GROUP_PROPERTY_1_2_INTEGER_MUTABLE_NO_TRACK = 1;
    GROUP_PROPERTY_1_3_DOUBLE_MUTABLE_NO_TRACK = 2;
    GROUP_PROPERTY_2_1_BOOLEAN_MUTABLE_TRACK = 3;
    GROUP_PROPERTY_2_2_INTEGER_MUTABLE_TRACK = 4;
    GROUP_PROPERTY_2_3_DOUBLE_MUTABLE_TRACK = 5;
    GROUP_PROPERTY_3_1_BOOLEAN_IMMUTABLE_NO_TRACK = 6;
    GROUP_PROPERTY_3_2_INTEGER_IMMUTABLE_NO_TRACK = 7;
    GROUP_PROPERTY_3_3_DOUBLE_IMMUTABLE_NO_TRACK = 8;
}
message GroupTypeIdInput {
    google.protobuf.Any id = 1;
}

message GroupPropertyIdInput {
    google.protobuf.Any id = 1;
}

message GroupMembershipInput {
    PersonIdInput personId = 1;
    repeated GroupIdInput groupIds = 2;
}

message GroupPropertyDefinitionMapInput {
    GroupTypeIdInput groupTypeId = 1;
    repeated PropertyDefinitionMapInput propertyDefinitions = 2;
}

message GroupPropertyValueMapInput {
   GroupIdInput groupId = 1;
   repeated PropertyValueMapInput propertyValueMap = 2;
}

message GroupInput {
    GroupIdInput groupId = 1;
    GroupTypeIdInput groupTypeId = 2;
}

message GroupsPluginDataInput {
    repeated GroupTypeIdInput groupTypeIds = 1;
    repeated GroupInput groups = 2;
    repeated GroupMembershipInput groupMemberships = 3;
    repeated GroupPropertyDefinitionMapInput groupPropertyDefinitions = 4;
    repeated GroupPropertyValueMapInput groupPropertyValues = 5;
}